--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,3 +1,3 @@
 name: ServerStatus
 version: @version@
-main: server.mecs.serverstatus.paper.bungee.ServerStatus
+main: server.mecs.serverstatus.bungee.ServerStatus
