--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,3 @@
 name: ServerStatus
 version: @version@
-main: server.mecs.serverstatus.paper.paper.ServerStatus
+main: server.mecs.serverstatus.paper.ServerStatus
